[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronotrack"
version = "0.1.0"
description = "A lightweight, object-oriented version tracking system for personal use"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ChronoTrack Team", email = "contact@chronotrack.dev"},
]
keywords = ["version-control", "git", "cli", "tracking", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/chronotrack/chronotrack"
Repository = "https://github.com/chronotrack/chronotrack"
Documentation = "https://github.com/chronotrack/chronotrack#readme"
Issues = "https://github.com/chronotrack/chronotrack/issues"

[project.scripts]
chrono = "chronotrack.cli:main"

[tool.hatch.build]
include = [
    "src/chronotrack/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chronotrack"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
